language/move-lang/tests/move_check/expansion/use_struct_same_name_as_function.exp
error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/expansion/use_struct_same_name_as_function.move:10:9
   │
 8 │     use 0x2::X::{U, U as U2};
   │                  - Alias previously defined here
 9 │ 
10 │     fun U() {}
   │         ^ Duplicate module member or alias 'U'. Top level names in a namespace must be unique

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/expansion/use_struct_same_name_as_function.move:11:9
   │
 8 │     use 0x2::X::{U, U as U2};
   │                          -- Alias previously defined here
   ·
11 │     fun U2() {}
   │         ^^ Duplicate module member or alias 'U2'. Top level names in a namespace must be unique

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/expansion/use_struct_same_name_as_function.move:15:18
   │
12 │     fun R() {}
   │         - Alias previously defined here
   ·
15 │     use 0x2::X::{R, R as R2};
   │                  ^ Duplicate module member or alias 'R'. Top level names in a namespace must be unique

warning[W09001]: unused alias
   ┌─ tests/move_check/expansion/use_struct_same_name_as_function.move:15:18
   │
15 │     use 0x2::X::{R, R as R2};
   │                  ^ Unused 'use' of alias 'R'. Consider removing it

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/expansion/use_struct_same_name_as_function.move:15:26
   │
13 │     fun R2() {}
   │         -- Alias previously defined here
14 │ 
15 │     use 0x2::X::{R, R as R2};
   │                          ^^ Duplicate module member or alias 'R2'. Top level names in a namespace must be unique

warning[W09001]: unused alias
   ┌─ tests/move_check/expansion/use_struct_same_name_as_function.move:15:26
   │
15 │     use 0x2::X::{R, R as R2};
   │                          ^^ Unused 'use' of alias 'R2'. Consider removing it

